--- a/about.html
+++ b/about.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>About - Logis Bootstrap Template</title>
+  <title>About - Connectwell Ventures</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <!-- <link href="assets/img/favicon.png" rel="icon"> -->
-  <!-- <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
+  <link href="assets/img/CV.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -46,7 +46,9 @@
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <!-- <h1 class="sitename">Logis</h1> -->
-        <h1 class="sitename" style="background-color: white;"><img src="/Logis/assets/img/connectwell_ventures.png" alt=""></h1>
+        <h1 class="sitename" style="background-color: white;">
+          <img src="/assets/img/connectwell_ventures.png" alt="">
+        </h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
