--- a/contact.html
+++ b/contact.html
@@ -113,9 +113,10 @@
           <div class="col-lg-4">
             <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
               <i class="bi bi-geo-alt flex-shrink-0"></i>
+
               <div>
                 <h3>Address</h3>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>Dimna Road, Jamshedpur 535022, India </p>
               </div>
             </div><!-- End Info Item -->
 
@@ -123,7 +124,7 @@
               <i class="bi bi-telephone flex-shrink-0"></i>
               <div>
                 <h3>Call Us</h3>
-                <p>+1 5589 55488 55</p>
+                <p>+91 7004157286</p>
               </div>
             </div><!-- End Info Item -->
 
@@ -131,7 +132,7 @@
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h3>Email Us</h3>
-                <p>info@example.com</p>
+                <p>info@connectwellventures.com</p>
               </div>
             </div><!-- End Info Item -->
 
@@ -218,11 +219,11 @@
 
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
           <h4>Contact Us</h4>
-          <p>A108 Adam Street</p>
-          <p>New York, NY 535022</p>
-          <p>United States</p>
-          <p class="mt-4"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-          <p><strong>Email:</strong> <span>info@example.com</span></p>
+          <p>Dimna Road</p>
+          <p>Jamshedpur, 831012</p>
+          <p>India</p>
+          <p class="mt-4"><strong>Phone:</strong> <span>+91 7004157286</span></p>
+          <p><strong>Email:</strong> <span>info@connectwellventures.com</span></p>
         </div>
 
       </div>
@@ -231,10 +232,6 @@
     <div class="container copyright text-center mt-4">
       <p>© <span>Copyright</span> <strong class="px-1 sitename">Logis</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
