--- a/services.html
+++ b/services.html
@@ -38,7 +38,7 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <!-- <h1 class="sitename">Logis</h1> -->
+        <!-- <h1 class="sitename">Connectwell Venture</h1> -->
         <h1 class="sitename" style="background-color: white;">
           <img src="/assets/img/connectwell_ventures.png" alt="">
         </h1>
@@ -162,7 +162,7 @@
               <div class="card-img">
                 <img src="assets/img/service-2.jpg" alt="" class="img-fluid">
               </div>
-              <h3><a href="#" class="stretched-link">Logistics</a></h3>
+              <h3><a href="#" class="stretched-link">Connectwell Venturetics</a></h3>
               <p>Asperiores provident dolor accusamus pariatur dolore nam id audantium ut et iure incidunt molestiae dolor ipsam ducimus occaecati nisi</p>
             </div>
           </div><!-- End Card Item -->
@@ -492,7 +492,7 @@
       <div class="row gy-4">
         <div class="col-lg-5 col-md-12 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">Logis</span>
+            <span class="sitename">Connectwell Venture</span>
           </a>
           <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
           <div class="social-links d-flex mt-4">
@@ -538,10 +538,7 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Logis</strong> <span>All Rights Reserved</span></p>
-      <div class="credits">
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">Connectwell Venture</strong> <span>All Rights Reserved</span></p>
     </div>
 
   </footer>
