--- a/services.html
+++ b/services.html
@@ -120,12 +120,12 @@
     <!-- Services Section -->
     <section id="services" class="services section">
 
-      <!-- Section Title -->
+      
       <div class="container section-title" data-aos="fade-up">
         <span>Our Services<br></span>
-        <h2>Our ServiceS</h2>
+        <h2>Our Services</h2>
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
-      </div><!-- End Section Title -->
+      </div>
 
       <div class="container">
 
