--- a/index.html
+++ b/index.html
@@ -219,6 +219,17 @@
                   </p>
                 </div>
               </div>
+              
+              <div class="swiper-slide">
+                <div class="testimonial-item">
+                  <img src="/assets/img/Home/welcome5.png" class="img-fluid" alt="">
+                  <p>
+                    <i class="bi bi-quote quote-icon-left"></i>
+                    <span>Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.</span>
+                    <i class="bi bi-quote quote-icon-right"></i>
+                  </p>
+                </div>
+              </div>
   
             </div>
             <div class="swiper-pagination"></div>
